# desafioGlogoFullStack

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
backend/: .gitignore
backend/frogChallenge/: asgi.py  urls.py  wsgi.py
backend/frogChallenge/core/: apps.py  views.py
backend/frogChallenge/core/migrations/: 0001_initial.py
backend/frogChallenge/tests/: cases.py
backend/frogChallenge/tests/data/: case_01.txt  case_03.txt  case_04.txt  case_07.txt  case_08.txt  case_09.txt
compose/backend/: Dockerfile
compose/frontend/: Dockerfile
compose/proxy/: nginx.conf
frogChallenge/: settings.py  urls.py
frogChallenge/core/: admin.py  filters.py  food.py  models.py  serializers.py  views.py
frogChallenge/core/migrations/: 0002_importedfile.py
frogChallenge/tests/: test_food.py  test_models.py  test_views.py
frogChallenge/tests/data/: case_02.txt  case_05.txt  case_06.txt  case_10_duplicate_name.txt
frontend/: .eslintrc.js  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/FoodItem/: index.tsx
frontend/src/components/FoodList/: index.tsx
frontend/src/containers/CarbsPage/: index.tsx
frontend/src/containers/FatsPage/: index.tsx
frontend/src/containers/HomePage/: index.tsx
frontend/src/containers/ProteinsPage/: index.tsx
frontend/src/store/: index.ts
frontend/src/store/ducks/: rootReducer.ts  rootSaga.ts
frontend/src/store/ducks/foods/: action.ts  index.ts  saga.ts  types.ts
